--- a/5. Libraries/2. Pandas/Pandas.ipynb
+++ b/5. Libraries/2. Pandas/Pandas.ipynb
@@ -1646,6 +1646,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datasrno</th>\n",
+       "      <th>workex</th>\n",
+       "      <th>gmat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>count</td>\n",
+       "      <td>773.00000</td>\n",
+       "      <td>773.00000</td>\n",
+       "      <td>773.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>mean</td>\n",
+       "      <td>387.00000</td>\n",
+       "      <td>57.50194</td>\n",
+       "      <td>711.164295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>std</td>\n",
+       "      <td>223.29017</td>\n",
+       "      <td>27.38682</td>\n",
+       "      <td>29.339714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>min</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>9.00000</td>\n",
+       "      <td>600.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25%</td>\n",
+       "      <td>194.00000</td>\n",
+       "      <td>41.00000</td>\n",
+       "      <td>690.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>50%</td>\n",
+       "      <td>387.00000</td>\n",
+       "      <td>52.00000</td>\n",
+       "      <td>710.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>75%</td>\n",
+       "      <td>580.00000</td>\n",
+       "      <td>69.00000</td>\n",
+       "      <td>730.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>max</td>\n",
+       "      <td>773.00000</td>\n",
+       "      <td>279.00000</td>\n",
+       "      <td>780.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        datasrno     workex        gmat\n",
+       "count  773.00000  773.00000  773.000000\n",
+       "mean   387.00000   57.50194  711.164295\n",
+       "std    223.29017   27.38682   29.339714\n",
+       "min      1.00000    9.00000  600.000000\n",
+       "25%    194.00000   41.00000  690.000000\n",
+       "50%    387.00000   52.00000  710.000000\n",
+       "75%    580.00000   69.00000  730.000000\n",
+       "max    773.00000  279.00000  780.000000"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mba.describe() #Get the Summary of the Data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
    "outputs": [
