Update 03. Choosing the right Estimator-Algorithm for Our Problem.ipynb

--- a/05. Libraries/4. Scikit-Learn/03. Choosing the right Estimator-Algorithm for Our Problem.ipynb
+++ b/05. Libraries/4. Scikit-Learn/03. Choosing the right Estimator-Algorithm for Our Problem.ipynb
@@ -709,11 +709,11 @@
     "# Lets Split the data into Train and test\n",
     "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.2)\n",
     "\n",
-    "# Instantiate LinearSVC\n",
+    "# Instantiate RandomForestClassifier\n",
     "clf = RandomForestClassifier()\n",
     "clf.fit(x_train, y_train)\n",
     "\n",
-    "# Evaluate the LinearSVC\n",
+    "# Evaluate the RandomForestClassifier\n",
     "clf.score(x_test, y_test)"
    ]
   },
