--- a/05. Libraries/4. Scikit-Learn/05. Evaluating a Machine Learning Model.ipynb
+++ b/05. Libraries/4. Scikit-Learn/05. Evaluating a Machine Learning Model.ipynb
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "array([0.78688525, 0.86885246, 0.80327869, 0.78333333, 0.76666667])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
        "4   0     2       1  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
        "0.8248087431693989"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +764,7 @@
        " 61)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
        "array([0.49, 0.83, 0.49, 0.28, 0.57, 0.88, 0.7 , 0.03, 0.85, 0.6 ])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +818,7 @@
        "       1.        ])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
        "0.8669181034482759"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -931,7 +931,7 @@
        "1.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
        "       [ 6, 26]], dtype=int64)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "1                  6  26"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,6 +1046,26 @@
     "           y_preds,\n",
     "           rownames=[\"Actual Labels\"],\n",
     "           colnames=[\"Predicted Labels\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "61"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "21+6+7+27"
    ]
   },
   {
@@ -1065,32 +1085,12 @@
     }
    ],
    "source": [
-    "21+6+7+27"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "61"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "len(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1153,16 +1153,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x20fbd4df788>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2fe74fbc8>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1219,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1303,7 +1303,7 @@
        "support    9999.00000  1.0    0.9999  10000.000000   10000.00000"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,6 +1318,417 @@
     "pd.DataFrame(classification_report(disease_true,\n",
     "                                  disease_preds,\n",
     "                                  output_dict=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To Summarize Classification Metrics:\n",
+    "\n",
+    "* **Accuracy** is a Good measure to start with if all classes are balanced(e.g. same amount of samples which are labelled with 0 or 1).\n",
+    "* **Precision** and **Recall** become more important when classes are imbalanced.\n",
+    "* If False Positive Predictions are worse than False Negative, aim for Higher Precision.\n",
+    "* If False Negative Predictions are worse than False Positive, aim for Higher Recall.\n",
+    "* **F1-Score** is a combination of Precision and Recall"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2.2 Regression model Evaluation Metrics\n",
+    "\n",
+    "1. R^2 (Pronounced r-squared) or Coefficient of Determination.\n",
+    "2. Mean Absolute Error (MAE)\n",
+    "3. Mean Squared Error(MSE)\n",
+    "\n",
+    "**R^2**\n",
+    "\n",
+    "What R-squared does: Compares your models predictions to the mean of the targets. values can range from negative infinity(a very poor model) to 1. For Example, if all your model does is predict the mean of the targets, it's R^2 value would be 0. And if your model perfectly Predicts a range of numbers it's R^2 value would be 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "x = boston_df.drop(\"target\", axis=1)\n",
+    "y = boston_df[\"target\"]\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.2)\n",
+    "\n",
+    "model = RandomForestRegressor()\n",
+    "model.fit(x_train, y_train);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8654448653350507"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "# Fill an array with y_test mean\n",
+    "\n",
+    "y_test_mean = np.full(len(y_test), y_test.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529, 21.48823529, 21.48823529, 21.48823529,\n",
+       "        21.48823529, 21.48823529]),\n",
+       " 21.488235294117654)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test_mean, y_test.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.220446049250313e-16"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_test, y_test_mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r2_score(y_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mean Absolute Error (MAE)**\n",
+    "\n",
+    "MAE is the Average of the absolute differences between the Predicted values and the Actual values. It gives you an Idea of How wrong your models Predictions are."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.136382352941176"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mean Absolute Error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "y_preds = model.predict(x_test)\n",
+    "mae = mean_absolute_error(y_test, y_preds)\n",
+    "mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Actual Data</th>\n",
+       "      <th>Predicted Data</th>\n",
+       "      <th>differences</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>23.6</td>\n",
+       "      <td>23.081</td>\n",
+       "      <td>-0.519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>32.4</td>\n",
+       "      <td>30.574</td>\n",
+       "      <td>-1.826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>491</th>\n",
+       "      <td>13.6</td>\n",
+       "      <td>16.759</td>\n",
+       "      <td>3.159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <td>22.8</td>\n",
+       "      <td>23.460</td>\n",
+       "      <td>0.660</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>452</th>\n",
+       "      <td>16.1</td>\n",
+       "      <td>16.893</td>\n",
+       "      <td>0.793</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>412</th>\n",
+       "      <td>17.9</td>\n",
+       "      <td>13.159</td>\n",
+       "      <td>-4.741</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>436</th>\n",
+       "      <td>9.6</td>\n",
+       "      <td>12.476</td>\n",
+       "      <td>2.876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>411</th>\n",
+       "      <td>17.2</td>\n",
+       "      <td>13.612</td>\n",
+       "      <td>-3.588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>86</th>\n",
+       "      <td>22.5</td>\n",
+       "      <td>20.205</td>\n",
+       "      <td>-2.295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>21.4</td>\n",
+       "      <td>23.832</td>\n",
+       "      <td>2.432</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>102 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Actual Data  Predicted Data  differences\n",
+       "173         23.6          23.081       -0.519\n",
+       "274         32.4          30.574       -1.826\n",
+       "491         13.6          16.759        3.159\n",
+       "72          22.8          23.460        0.660\n",
+       "452         16.1          16.893        0.793\n",
+       "..           ...             ...          ...\n",
+       "412         17.9          13.159       -4.741\n",
+       "436          9.6          12.476        2.876\n",
+       "411         17.2          13.612       -3.588\n",
+       "86          22.5          20.205       -2.295\n",
+       "75          21.4          23.832        2.432\n",
+       "\n",
+       "[102 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(data={\"Actual Data\": y_test, \"Predicted Data\": y_preds})\n",
+    "df[\"differences\"] = df[\"Predicted Data\"] - df[\"Actual Data\"]\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mean Sqaured Error (MSE)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.867437068627442"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mean Squared Error\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "y_preds = model.predict(x_test)\n",
+    "mse = mean_squared_error(y_test, y_preds)\n",
+    "mse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "173     0.269361\n",
+       "274     3.334276\n",
+       "491     9.979281\n",
+       "72      0.435600\n",
+       "452     0.628849\n",
+       "         ...    \n",
+       "412    22.477081\n",
+       "436     8.271376\n",
+       "411    12.873744\n",
+       "86      5.267025\n",
+       "75      5.914624\n",
+       "Name: differences, Length: 102, dtype: float64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate MSE by hand\n",
+    "squared = np.square(df[\"differences\"])\n",
+    "squared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.867437068627439"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "squared.mean()"
    ]
   },
   {
