Update 05. Evaluating a Machine Learning Model.ipynb

--- a/05. Libraries/4. Scikit-Learn/05. Evaluating a Machine Learning Model.ipynb
+++ b/05. Libraries/4. Scikit-Learn/05. Evaluating a Machine Learning Model.ipynb
@@ -1159,7 +1159,7 @@
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1b2fe74fbc8>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x1779f1dfb48>"
       ]
      },
      "execution_count": 32,
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
        "0.8654448653350507"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1432,7 +1432,7 @@
        " 21.488235294117654)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1452,7 +1452,7 @@
        "2.220446049250313e-16"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1472,7 +1472,7 @@
        "1.0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1492,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1501,7 +1501,7 @@
        "2.136382352941176"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1635,7 @@
        "[102 rows x 3 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1655,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1664,7 @@
        "9.867437068627442"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
        "Name: differences, Length: 102, dtype: float64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1722,13 +1722,375 @@
        "9.867437068627439"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "squared.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.2.3 Finally Using the `scoring` Parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "x = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"]\n",
+    "\n",
+    "clf = RandomForestClassifier()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.81967213, 0.90163934, 0.83606557, 0.78333333, 0.78333333])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "cv_acc = cross_val_score(clf,x, y)\n",
+    "cv_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cross-validated accuracy is:82.48%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cross-Validated Accuracy\n",
+    "print(f'The cross-validated accuracy is:{np.mean(cv_acc)*100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The cross-validated accuracy is:82.48%\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "cv_acc = cross_val_score(clf, x, y, cv=5, scoring=\"accuracy\")\n",
+    "print(f'The cross-validated accuracy is:{np.mean(cv_acc)*100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8085601538512754"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_precision = cross_val_score(clf, x, y, cv=5, scoring=\"precision\")\n",
+    "np.mean(cv_precision)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8424242424242424"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_recall = cross_val_score(clf, x, y, cv = 5, scoring=\"recall\")\n",
+    "np.mean(cv_recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.841476533416832"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_f1 = cross_val_score(clf, x, y, cv = 5, scoring = \"f1\")\n",
+    "np.mean(cv_f1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How About our Regression Model?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "x = boston_df.drop(\"target\", axis=1)\n",
+    "y = boston_df[\"target\"]\n",
+    "\n",
+    "model = RandomForestRegressor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6243870737930857"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "cv_r2 = cross_val_score(model, x, y, cv=5, scoring=None)\n",
+    "np.mean(cv_r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.77231143, 0.86035935, 0.74664002, 0.47632078, 0.26630379])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.seed(42)\n",
+    "cv_r2 = cross_val_score(model, x, y, cv=5, scoring=\"r2\")\n",
+    "cv_r2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.13045098, -2.49771287, -3.45471287, -3.81509901, -3.11813861])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mean Absolute Error (MAE)\n",
+    "cv_mae = cross_val_score(model, x, y, cv = 5, scoring=\"neg_mean_absolute_error\")\n",
+    "cv_mae"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-21.12863512415064"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Mean Squared Error(MSE)\n",
+    "cv_mse=cross_val_score(model, x, y, cv=5, scoring=\"neg_mean_squared_error\")\n",
+    "np.mean(cv_mse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.3 Problem Specific Metric Functions\n",
+    "\n",
+    "Using Different Evaluation metrics as Scikit-Learn Functions\n",
+    "\n",
+    "**Classification Evaluation Metrics**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier metrics on the test set\n",
+      "Accuracy:83.13%\n",
+      "Precision: 0.8079470198675497\n",
+      "Recall: 0.9104477611940298\n",
+      "F1 : 0.856140350877193\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "x = heart_disease.drop(\"target\", axis=1)\n",
+    "y = heart_disease[\"target\"]\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.2)\n",
+    "\n",
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(x_train, y_train)\n",
+    "\n",
+    "# Make some Predictions\n",
+    "y_preds = clf.predict(x_test)\n",
+    "\n",
+    "# Evaluate the Classifier\n",
+    "print(\"Classifier metrics on the test set\")\n",
+    "print(f\"Accuracy:{accuracy_score(y_test, y_preds)*100:.2f}%\")\n",
+    "print(f\"Precision: {precision_score(y_test, y_preds)}\")\n",
+    "print(f\"Recall: {recall_score(y_test, y_preds)}\")\n",
+    "print(f\"F1 : {f1_score(y_test, y_preds)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Regression Evaluation Functions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regression Metrics on the test\n",
+      "R^2: 0.8654448653350507\n",
+      "Mean Absolute Error: 2.136382352941176\n",
+      "Mean Squared Error: 9.867437068627442\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "x = boston_df.drop(\"target\", axis=1)\n",
+    "y = boston_df[\"target\"]\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2)\n",
+    "\n",
+    "model = RandomForestRegressor()\n",
+    "model.fit(x_train, y_train)\n",
+    "\n",
+    "# Make some Predictions\n",
+    "y_preds = model.predict(x_test)\n",
+    "\n",
+    "# Evaluate the Regression model\n",
+    "print(\"Regression Metrics on the test\")\n",
+    "print(f\"R^2: {r2_score(y_test, y_preds)}\")\n",
+    "print(f\"Mean Absolute Error: {mean_absolute_error(y_test, y_preds)}\")\n",
+    "print(f\"Mean Squared Error: {mean_squared_error(y_test, y_preds)}\")\n"
    ]
   },
   {
